[gd_scene load_steps=3 format=3 uid="uid://c6c2hbcmhpa4v"]

[ext_resource type="Script" uid="uid://dmmubcv7vygx8" path="res://src/order_slip.gd" id="1_f8ef0"]

[sub_resource type="LabelSettings" id="LabelSettings_m5roy"]
font_size = 20

[node name="OrderSlip" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1002.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
mouse_filter = 1
script = ExtResource("1_f8ef0")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(150, 200)
layout_mode = 0
offset_right = 150.0
offset_bottom = 200.0
mouse_filter = 1
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_right = 151.0
offset_bottom = 203.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Order #"
label_settings = SubResource("LabelSettings_m5roy")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "#####"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Order: "
